--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -18,9 +18,9 @@
     of relationships is enabled through the active involvement of users. The system is available
     online for a broad user audience.
   thanks: |
-    “Netzwerk des Tages” (Network of the Day) is funded by BMBF via a grant from
+    “Netzwerk des Tages” (Network of the Day) is funded by the German Federal Ministry of Education and Research (BMBF) via a grant from
     <a href="http://www.hochschulwettbewerb2014.de/gewinner/netzwerk-des-tages-onlineplattform.html">Hochschulwettbewerb
-    2014</a>
+    2014</a>.
   github: NetworkOfDay
 
 - title: KaVE Feedback Generator
