--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: Uli Fahrer
+url: http://www.uli-fahrer.de
 permalink: /notes/:year/:month/:day/:title
 markdown: kramdown
 baseurl: ""
@@ -6,3 +7,8 @@ description: "Uli Fahrer: CS Student, Developer"
 
 twitter_username: UliFahrer
 github_username:  Tooa
+
+comments:
+    provider: disqus
+    disqus:
+        short_name: t0a
