rework project page with slider

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -23,6 +23,7 @@
     <a href="http://www.hochschulwettbewerb2014.de/gewinner/netzwerk-des-tages-onlineplattform.html">Hochschulwettbewerb
     2014</a>.
   github: NetworkOfDay
+  active: true
 
 - title: KaVE Feedback Generator
   time: Apr 2013 - Nov 2014
