add support for syntax highlighting

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 title: Uli Fahrer
 url: http://www.uli-fahrer.de
 permalink: /notes/:year/:month/:day/:title
-markdown: kramdown
+markdown: redcarpet
+highlighter: pygments
 baseurl: ""
 description: "Uli Fahrer: CS Student, Developer"
 
