--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -47,5 +47,5 @@
     During my work as student assistant for the <a href="lt.tu-darmstadt.de/de/lt-home/" target="_blank">Language Technology Group</a>
                     I've contributed a Twitter-Analysis to the book <i>"Die Stellung der deutschen Sprache in der Welt"</i>
                     written by <a href="http://www.ulrichammon.de/" target="_blank">Prof. Dr. Phil. Ulrich Amorn</a>. 
-                    The book is available on <a href="http://goo.gl/2Y3eCN" target="_blank">Amazon</a>
+                    The book is available on <a href="http://goo.gl/2Y3eCN" target="_blank">Amazon</a>.
   type: book
