Replace pysegments with rouge

--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,14 @@ title: Uli Fahrer
 url: http://www.uli-fahrer.de
 permalink: /notes/:year/:month/:day/:title
 markdown: kramdown
-highlighter: pygments
 baseurl: ""
 description: "Uli Fahrer: CS Student, Developer"
+
+highlighter: rouge
+
+kramdown:
+  input: GFM
+  syntax_highlighter: rouge
 
 twitter_username: UliFahrer
 github_username:  Tooa
