--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -21,7 +21,7 @@
   booktitle: "In GI-Edition Lecture Notes in Informatics"
   pages: 257–260
   publisher: Potsdam, Germany
-  url: http://maggie.lt.informatik.tu-darmstadt.de/BTWitter/static/files/workshop_paper.pdf
+  url: http://maggie.lt.informatik.tu-darmstadt.de/thesis/bachelor/BTWitter/core/static/files/workshop_paper.pdf
   type: workshop
   
 - title: >
@@ -44,7 +44,7 @@
   publisher: "Berlin/ München/ Boston: Walter de Gruyter"
   url: http://www.goo.gl/FEkfB4
   meta: |
-    During my work as student assistant for the <a href="lt.tu-darmstadt.de/de/lt-home/" target="_blank">Language Technology Group</a>
+    During my work as student assistant for the <a href="http://www.lt.tu-darmstadt.de/de/lt-home/" target="_blank">Language Technology Group</a>
                     I've contributed a Twitter-Analysis to the book <i>"Die Stellung der deutschen Sprache in der Welt"</i>
                     written by <a href="http://www.ulrichammon.de/" target="_blank">Prof. Dr. Phil. Ulrich Amorn</a>. 
                     The book is available on <a href="http://goo.gl/2Y3eCN" target="_blank">Amazon</a>.
