--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -13,7 +13,7 @@
   location: Universitätsverlag Hildesheim
   url: http://opus.bsz-bw.de/ubhi/volltexte/2014/294
   type: workshop
-  
+
 - title: >
     Contrastive Co-occurrence Analysis
     on Twitter for the German Election 2013
@@ -25,12 +25,12 @@
   location: Potsdam, Germany
   url: https://www.gi.de/fileadmin/redaktion/Seminars/lni-s-13.pdf
   type: workshop
-  
+
 - title: >
       Network of the Day: Interactive Visualization of
       Time-Dependent Entity Relation Networks
   author: >
-      Uli Fahrer, Darina Benikova, Alexander Gabriel, Manuel Kaufmann, 
+      Uli Fahrer, Darina Benikova, Alexander Gabriel, Manuel Kaufmann,
       Seid Muhie Yimam, Tatiana von Landesberger and Chris Biemann
   year: 2014
   month: October
@@ -43,7 +43,7 @@
       new/s/leak – Information Extraction and Visualization for an Investigative
        Data Journalists
   author: >
-      Seid Muhie Yimam, Heiner Ulrich, Tatiana von Landesberger, Marcel Rosenbach, Michaela Regneri, 
+      Seid Muhie Yimam, Heiner Ulrich, Tatiana von Landesberger, Marcel Rosenbach, Michaela Regneri,
       Alexander Panchenko, Franziska Lehmann, Uli Fahrer, Chris Biemann and Kathrin Ballweg
   booktitle: Proceedings of the 54th Annual Meeting of the Association for Computational Linguistics on Interactive Poster and Demonstration Sessions
   pages: 163-168
@@ -83,7 +83,7 @@
   author: Ulrich Ammon
   year: 2015
   location: "Berlin/ München/ Boston: De Gruyter Mouton"
-  url: http://www.goo.gl/FEkfB4
+  url: https://www.amazon.de/Die-Stellung-deutschen-Sprache-Welt/dp/3110192985/ref=sr_1_1?ie=UTF8&qid=1423745324&sr=8-1&keywords=Die+Stellung+der+deutschen+Sprache+in+der+Welt
   meta: |
     I've contributed a Twitter-Analysis to the book <i>"Die Stellung der deutschen Sprache in der Welt"</i> during my work as student assistant for the <a href="http://www.lt.tu-darmstadt.de/de/lt-home/" target="_blank">Language Technology Group</a> at TU Darmstadt. It is written by <a href="http://www.ulrichammon.de/" target="_blank">Prof. Dr. Phil. Ulrich Amorn</a> and is available on <a href="http://goo.gl/2Y3eCN" target="_blank">Amazon</a>.
   type: book
