fix: update more broken links

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -9,7 +9,7 @@
     one of eight projects to be funded by Volkswagen foundation under the call
     <a href="https://www.volkswagenstiftung.de/datenjournalismus.html" target="_blank">"Science and Data-Driven Journalism"</a>. I'm involved in backend development, large scale engineering and the implementation of statistical NLP techniques.
   duration: Nov 2015 - Dec 2016
-  page: <a href="https://www.lt.informatik.tu-darmstadt.de/de/research/divid-djdata-extraction-and-interactive-visualization-of-unexplored-textual-datasets-for-investigative-data-driven-journalism/" target="_blank">DIVID-DJ</a>
+  page: <a href="https://www.newsleak.io/" target="_blank">Newsleak.io</a>
   active: false
 
 - title: Network of the Day
@@ -21,7 +21,7 @@
     Cooperative tagging of relationships is enabled through the active involvement of users. The system is available online for a broad user audience.
     I was involved in backend development and the implementation of statistical NLP techniques.
   duration: Apr 2014 - Nov 2014
-  page: <a href="http://www.tagesnetzwerk.de" target="_blank">NoD</a>
+  page: <a href="https://www.inf.uni-hamburg.de/en/inst/ab/lt/resources/demos/network-of-the-day.html" target="_blank">NoD</a>
   active: false
 
 - title: KaVE-Project
