feat: update publications

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -85,5 +85,5 @@
   location: "Berlin/ München/ Boston: De Gruyter Mouton"
   url: https://www.amazon.de/Die-Stellung-deutschen-Sprache-Welt/dp/3110192985/ref=sr_1_1?ie=UTF8&qid=1423745324&sr=8-1&keywords=Die+Stellung+der+deutschen+Sprache+in+der+Welt
   meta: |
-    I've contributed a Twitter-Analysis to the book <i>"Die Stellung der deutschen Sprache in der Welt"</i> during my work as student assistant for the <a href="https://www.inf.uni-hamburg.de/en/inst/ab/lt/home.html" target="_blank">Language Technology Group</a> at TU Darmstadt. It is written by <a href="http://www.ulrichammon.de/" target="_blank">Prof. Dr. Phil. Ulrich Amorn</a> and is available on <a href="http://goo.gl/2Y3eCN" target="_blank">Amazon</a>.
+    I contributed an analysis using Twitter data to the book <i>"Die Stellung der deutschen Sprache in der Welt"</i> during my work as student assistant for the <a href="https://www.inf.uni-hamburg.de/en/inst/ab/lt/home.html" target="_blank">Language Technology Group</a> at TU Darmstadt. It is written by <a href="http://www.ulrichammon.de/" target="_blank">Prof. Dr. Phil. Ulrich Amorn</a> and is available on <a href="http://goo.gl/2Y3eCN" target="_blank">Amazon</a>.
   type: book
