fix: replace broken links

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -7,9 +7,9 @@
     The project is a collaboration between the <a href="https://spiegel.de" target=" _blank">Spiegel-Verlag Hamburg </a>,
     the Language Technology Group and the Interactive Graphics Systems Group at TU Darmstadt. It was selected as
     one of eight projects to be funded by Volkswagen foundation under the call
-    <a href="https://www.volkswagenstiftung.de/en/funding/science-and-data-driven-journalism" target="_blank">"Science and Data-Driven Journalism"</a>. I'm involved in backend development, large scale engineering and the implementation of statistical NLP techniques.
+    <a href="https://www.volkswagenstiftung.de/en/funding/funding-offer/science-and-data-driven-journalism-completed" target="_blank">"Science and Data-Driven Journalism"</a>. I'm involved in backend development, large scale engineering and the implementation of statistical NLP techniques.
   duration: Nov 2015 - Dec 2016
-  page: <a href="https://www.newsleak.io/" target="_blank">Newsleak.io</a>
+  page: <a href="https://www.inf.uni-hamburg.de/en/inst/ab/lt/resources/demos/new-s-leak.html" target="_blank">Newsleak</a>
   active: false
 
 - title: Network of the Day
