--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Uli Fahrer
 url: http://www.uli-fahrer.de
-permalink: /notes/:year/:month/:day/:title
+permalink: /blog/:year/:month/:day/:title
 baseurl: ""
 description: "Uli Fahrer: DevSecOps Engineer"
 
@@ -8,4 +8,4 @@ kramdown:
   input: GFM
   syntax_highlighter: rouge
 
-github_username:  Tooa
+github_username: Tooa
