--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -77,11 +77,11 @@
   type: workshop
 
 - title: >
-    Die Stellung der deutschen Sprache in der Welt: Die Standardsprache in Österreich, der Schweiz, Deutschland, Liechtenstein, Luxemburg, Ostbelgien und Südtirol  sowie Rumänien, Namibia und Mexiko.
+    Die Stellung der deutschen Sprache in der Welt: Die Standardsprache in Österreich, der Schweiz, Deutschland, Liechtenstein, Luxemburg, Ostbelgien und Südtirol  sowie Rumänien, Namibia und Mexiko
   author: Ulrich Ammon
   year: 2015
   location: "Berlin/ München/ Boston: De Gruyter Mouton"
   url: https://www.amazon.de/Die-Stellung-deutschen-Sprache-Welt/dp/3110192985/ref=sr_1_1?ie=UTF8&qid=1423745324&sr=8-1&keywords=Die+Stellung+der+deutschen+Sprache+in+der+Welt
   meta: |
-    I contributed an analysis based on Twitter data to the book <i>"Die Stellung der deutschen Sprache in der Welt"</i> during my work as student assistant for the <a href="https://www.inf.uni-hamburg.de/en/inst/ab/lt/home.html" target="_blank">Language Technology Group</a> at TU Darmstadt. It is written by <a href="http://www.ulrichammon.de/" target="_blank">Prof. Dr. Phil. Ulrich Amorn</a> and is available on <a href="http://goo.gl/2Y3eCN" target="_blank">Amazon</a>.
+    Note: I contributed an analysis based on Twitter data to the book <i>"Die Stellung der deutschen Sprache in der Welt"</i> during my work as student assistant for the <a href="https://www.inf.uni-hamburg.de/en/inst/ab/lt/home.html" target="_blank">Language Technology Group</a> at TU Darmstadt. It is written by <a href="http://www.ulrichammon.de/" target="_blank">Prof. Dr. Phil. Ulrich Ammon</a> and is available on <a href="http://goo.gl/2Y3eCN" target="_blank">Amazon</a>.
   type: book
